--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-plx": "^2.1.2",
+    "react-swipeable": "^7.0.1",
     "tailwindcss": "3.3.3",
     "typewriter-effect": "^2.20.1"
   }
